# CxxDBC

./: .gitignore  API-Versioning.md  CMakeLists.txt  LICENSE  README.md
include/cxxdbc/: blob.h  connection.h  driver.h  driver_manager.h  exception.h  make_unique.h  properties.h  result_set.h  result_set_meta_data.h  statement.h  type.h
include/cxxdbc/1.0/: blob.h  connection.h  driver.h  driver_manager.h  driver_property_info.h  exception.h  properties.h  result_set.h  result_set_meta_data.h  statement.h  type.h
include/cxxdbc/1.0/concept/: connection.h  result_set.h  result_set_meta_data.h  statement.h
include/cxxdbc/1.0/support/: make_unique.h  string_ref_hash.h
include/cxxdbc/concept/: connection.h  result_set_meta_data.h  statement.h
src/: driver_manager.cpp
test/nulldriver/: null_driver.cpp  null_driver.h
test/unit/: blob.t.cpp  connection.t.cpp  exception.t.cpp  result_set.t.cpp  result_set_meta_data.t.cpp  statement.t.cpp
test/unit/1.0/: blob.t.cpp  connection.t.cpp  driver.t.cpp  driver_manager.t.cpp  exception.t.cpp  result_set.t.cpp  result_set_meta_data.t.cpp  statement.t.cpp
